Added JWT logic to Startup.cs

--- a/OngProject/appsettings.json
+++ b/OngProject/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Jwt": {
+    "Issuer": "",
+    "Audience": "",
+    "Key": ""
+  },
   "AllowedHosts": "*"
+
 }
