Fix so can migration be generated

--- a/OngProject/appsettings.json
+++ b/OngProject/appsettings.json
@@ -11,6 +11,8 @@
     "Audience": "",
     "Key": ""
   },
-  "AllowedHosts": "*"
-
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ONG": "Server=(localdb)\\MSSQLLocalDB;Database=ONG;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
