Adds AmazonS3 SDK and configures helper for image uploading
Se deberá vincular el servicio para manejo de archivos Amazon S3, a través de su SDK para .NET. El mismo se utilizará posteriormente para campos de diferentes entidades, como la foto de perfil del usuario, logo de ONG, imágenes del blog y demás, por lo que debe crearse un servicio reutilizable para el manejo de archivos.

--- a/OngProject/appsettings.json
+++ b/OngProject/appsettings.json
@@ -14,5 +14,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ONG": "Server=(localdb)\\MSSQLLocalDB;Database=ONG;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "AwsConfiguration": {
+    "AWSAccessKey" : "",
+    "AWSSecretKey": "",
+    "AWSBucketName": ""
   }
 }
