testing users endpoint

--- a/OngProject/appsettings.json
+++ b/OngProject/appsettings.json
@@ -9,7 +9,7 @@
   "Jwt": {
     "Issuer": "",
     "Audience": "",
-    "Key": ""
+    "Key": "ONGAlkemy"
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
