Added token return on Register method and modified both IAuthBusiness and AuthBusiness

--- a/OngProject/appsettings.json
+++ b/OngProject/appsettings.json
@@ -9,7 +9,7 @@
   "Jwt": {
     "Issuer": "",
     "Audience": "",
-    "Key": "ONGAlkemy"
+    "Key": "ONGAlkemySampleKeyAuthentication"
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
