--- a/OngProject/appsettings.json
+++ b/OngProject/appsettings.json
@@ -7,8 +7,8 @@
     }
   },
   "Jwt": {
-    "Issuer": "",
-    "Audience": "",
+    "Issuer": "https://localhost:44353/",
+    "Audience": "https://localhost:44353/",
     "Key": "ONGAlkemySampleKeyAuthentication"
   },
   "AllowedHosts": "*",
