DB name Change back

--- a/OngProject/appsettings.json
+++ b/OngProject/appsettings.json
@@ -13,7 +13,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ONG": "Server=(localdb)\\MSSQLLocalDB;Database=ONGAlkemy;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ONG": "Server=(localdb)\\MSSQLLocalDB;Database=ONG;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AwsConfiguration": {
     "AWSAccessKey" : "",
