Adds email details in app config to make it easier to config

--- a/OngProject/appsettings.json
+++ b/OngProject/appsettings.json
@@ -19,5 +19,13 @@
     "AWSAccessKey" : "",
     "AWSSecretKey": "",
     "AWSBucketName": ""
+  },
+  "EmailConfigModel": {
+    "WelcomeEmail": {
+      "Subject": "Welcome to xxxONG",
+      "Content": "Thanks for becoming one of our members",
+      "Title": "We're glad you are here"
+    }
+
   }
 }
