Fixed send email method

--- a/OngProject/appsettings.json
+++ b/OngProject/appsettings.json
@@ -22,9 +22,14 @@
   },
   "EmailConfigModel": {
     "WelcomeEmail": {
-      "Subject": "Welcome to xxxONG",
-      "Content": "Thanks for becoming one of our members",
-      "Title": "We're glad you are here"
+        "Subject": "Welcome to xxxONG",
+        "Content": "Thanks for becoming one of our members",
+        "Title": "We're glad you are here"
+    },
+    "AddContactEmail": {
+        "Subject": "New contact added",
+        "Content": "Thanks for adding a new contact and supporting this ONG with your help",
+        "Title":  "Thank you!"
     }
 
   }
